--- a/public/404.html
+++ b/public/404.html
@@ -80,14 +80,14 @@
   
   
   
-  <link rel="preload stylesheet" as="style" href="//localhost:1313/main.min.css" />
+  <link rel="preload stylesheet" as="style" href="http://localhost:1313/main.min.css" />
 
   
   
   
   
   
-  <link rel="preload" as="image" href="//localhost:1313/theme.png" />
+  <link rel="preload" as="image" href="http://localhost:1313/theme.png" />
 
   
   
@@ -99,7 +99,7 @@
 
   
   
-  <link rel="preload" as="image" href="//localhost:1313/github.svg" />
+  <link rel="preload" as="image" href="http://localhost:1313/github.svg" />
   
   
 
@@ -113,11 +113,11 @@
   
   <link
     rel="icon"
-    href="//localhost:1313/favicon.ico"
+    href="http://localhost:1313/favicon.ico"
   />
   <link
     rel="apple-touch-icon"
-    href="//localhost:1313/apple-touch-icon.png"
+    href="http://localhost:1313/apple-touch-icon.png"
   />
 
   
@@ -131,7 +131,7 @@
   <body class="text-black duration-200 ease-out dark:text-white">
     <header class="mx-auto flex h-[4.5rem] max-w-[--w] px-8 lg:justify-center">
   <div class="relative z-50 ltr:mr-auto rtl:ml-auto flex items-center">
-    <a class="-translate-y-[1px] text-2xl font-medium" href="//localhost:1313/"
+    <a class="-translate-y-[1px] text-2xl font-medium" href="http://localhost:1313/"
       >Blog của NTT</a
     >
     <div
@@ -253,7 +253,7 @@
   <div class="mr-auto">
   
     &copy; 2024
-    <a class="link" href="//localhost:1313/">Blog của NTT</a>
+    <a class="link" href="http://localhost:1313/">Blog của NTT</a>
   
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
